--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 html,
 body {
   overflow-x: hidden;
+  max-width: 100vw;
   scroll-behavior: smooth;
-  width: 100vw;
 }
 :root {
   --secondary-color: #ccff33;
@@ -330,6 +330,9 @@ nav {
 }
 /* RESPONSIVE FOR PHONE  */
 @media only screen and (max-width: 600px) {
+  body {
+    width: 100vw;
+  }
   #scrollup {
     position: fixed;
     right: 102vw;
@@ -344,9 +347,11 @@ nav {
   .navbar ul {
     justify-content: space-evenly;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     top: 0vh;
-    right: -100%;
+    right: -100vw;
+
+    overflow-x: hidden;
     background: white;
     width: 100%;
     text-align: center;
@@ -367,7 +372,6 @@ nav {
     cursor: pointer;
   }
   .click {
-    /* right: 100%; */
     left: 0;
   }
   .hero div {
@@ -450,7 +454,7 @@ nav {
     flex-direction: column;
     position: absolute;
     top: 0vh;
-    right: -100%;
+    right: -200vw;
     background: white;
     width: 100%;
     text-align: center;
